@@ -8,6 +8,7 @@ import org.telegram.telegrambots.meta.api.objects.Update;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -31,7 +32,7 @@ public class Example {
 
     @Command(value = "/declarative_bot_example_count")
     public List<String> count(Message message) {
-        return Stream.of("1", "2", "3").toList();
+        return Stream.of("1", "2", "3").collect(Collectors.toList());
     }
 
     @Command(value = "/examples")
